# backup-gdrive-s3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr.yaml  sync.yaml
docs/: backup-gdrive-s3.drawio
src/: main.py  rclone_config.py  secret_manager.py
