[tool.poetry]
name = "backup-gdrive-s3"
version = "0.1.0"
description = "Backup scripts for syncing Google Drive to S3 Glacier IR"
authors = ["Ankit Patterson <dev@weirdion.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
line-length = 100

[tool.isort]
profile = "black"
